bk_ida/gccida/c0/convert_modes
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_modes/src/expr.c:1741:21: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  convert_modes( machine_mode mode, machine_mode oldmode, rtx x, int unsignedp) 
                    ^
                    enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_modes/src/expr.c:1741:40: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  convert_modes( machine_mode mode, machine_mode oldmode, rtx x, int unsignedp) 
                                       ^
                                       enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_modes/src/expr.c:1763:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] == MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_modes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_modes/src/expr.c:1774:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[mode] == MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_modes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_modes/src/expr.c:1775:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[oldmode] == MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_modes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_modes/src/obj/expr.o] Error 1
